# paleoglac

./: LICENSE  README.md  environment.yml  pyproject.toml
examples/: basic_use.py  regional_use.py
sample_data/: dem.tif  outlines.gpkg
src/paleoglac/: __init__.py  ela.py  examples.py  paleoglac.py  surface.py
